[metadata]
name = "lib_test",
author = "Benoit FREMON",
author_email = "ben@in.volution.fr",
description = "lib test",
long_description = "lib_test",
license = "GPL",
url = "https://git.volution.fr:4444/lib_test",
packages = ['dpa_utils'],
classifiers=[
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
    ],

[options]
packages = find: