[metadata]
name = "Load_utils",
author = "Benoit FREMON",
author_email = "ben@in.volution.fr",
description = "lib test",
long_description = "Load_utils",
license = "GPL",
url = "https://git.volution.fr:4444/Load_utils",
packages = ['dpa_utils'],
classifiers=[
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
    ],

[options]
packages = find: